# Dashcam-Image-Analysis-Alpamayo-R1

./: .gitignore  Dockerfile  README.md  output.txt  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yml
data/: datafile.txt
src/: inference.py  main.mojo  simulate.mojo  test_mojo.mojo
src/alpamayo_r1/: __init__.mojo  common.mojo  config.mojo  helper.mojo  load_physical_aiavdataset.mojo
src/alpamayo_r1/action_space/: __init__.mojo  action_space.mojo  unicycle_action_curvature.py  utils.mojo  utils.py
src/alpamayo_r1/diffusion/: flow_matching.mojo
src/alpamayo_r1/geometry/: __init__.mojo  rotation.mojo
visualization/: generate_plots.py
